--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "truffle-privatekey-provider": "^1.5.0"
   },
   "devDependencies": {
+    "@openzeppelin/truffle-upgrades": "^1.14.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "openzeppelin-test-helpers": "^0.4.3",
